--- a/.neuro/data-update.yaml
+++ b/.neuro/data-update.yaml
@@ -54,7 +54,7 @@ tasks:
     bash: |
         echo "IdentityFile ~/.ssh/id-rsa" > ~/.ssh/config
         ssh-keyscan github.com >> ~/.ssh/known_hosts
-        git clone -b pachyderm git@github.com:neuro-inc/mlops-demo-oss-dogs.git ${PROJECT}
+        git clone -b master git@github.com:neuro-inc/mlops-demo-oss-dogs.git ${PROJECT}
         
         # Init pachctl
         pachctl config update context default --pachd-address ${PACHY_URI}
