--- a/.neuro/live.yml
+++ b/.neuro/live.yml
@@ -3,19 +3,20 @@ title: demo-oss-dogs
 id: mlops_demo_oss_dogs
 
 defaults:
-  preset: cpu-small
+  preset: cpu-medium-p
   life_span: 1d
+  env:
+    # Those env vars will be assigned to every job in this flow
+    PACHY_URI: pachd.pachyderm.svc.cluster.local:650
+    PACHY_REPO: dogs-demo
+    PROJECT_GIT_REPO: git@github.com:neuro-inc/mlops-demo-oss-dogs.git
+    # todo: change to master when merging the PR
+    PROJECT_GIT_BRANCH: ys/finilizing
 
 volumes:
-  data:
-    remote: storage:$[[ flow.flow_id ]]/data
-    mount: /data
   remote_dataset:
     remote: storage:$[[ flow.flow_id ]]/dataset
     mount: /dataset
-  project:
-    remote: storage:$[[ flow.flow_id ]]
-    mount: /project
   postgress_storage:
     remote: disk:mlops-demo-oss-dogs-postgres
     mount: /var/lib/postgresql/data
@@ -27,32 +28,38 @@ volumes:
     mount: /storage-label-studio-project
   src:
     remote: storage:$[[ flow.flow_id ]]/src
-    mount: /project/src
+    mount: /usr/project/src
     local: src
   config:
     remote: storage:$[[ flow.flow_id ]]/config
-    mount: /project/config
+    mount: /usr/project/config
     local: config
+  notebooks:
+    remote: storage:$[[ flow.flow_id ]]/notebooks
+    mount: /usr/project/notebooks
+    local: notebooks
 
 images:
   train:
-    ref: image:$[[ flow.flow_id ]]:21.1.13-pachyderm
+    ref: image:$[[ flow.flow_id ]]/train:21.5.13-pachyderm
     dockerfile: $[[ flow.workspace ]]/Dockerfile
     context: $[[ flow.workspace ]]/
+    build_preset: cpu-medium-p
   seldon:
     ref: image:$[[ flow.flow_id ]]/seldon:20.12.16
     dockerfile: $[[ flow.workspace ]]/seldon/seldon.Dockerfile
     context: $[[ flow.workspace ]]/
+    build_preset: cpu-medium-p
   label_studio:
     ref: image:$[[ flow.flow_id ]]/label_studio:21.1.18-pachyderm
     dockerfile: $[[ flow.workspace ]]/label_studio/label_studio.Dockerfile
     context: $[[ flow.workspace ]]/label_studio
+    build_preset: cpu-medium-p
 
 jobs:
 
   prepare_remote_dataset:
     image: neuromation/neuro-extras:20.12.15
-    preset: cpu-small
     detach: False
     volumes:
       - ${{ volumes.remote_dataset.ref_rw }}
@@ -70,47 +77,39 @@ jobs:
 
   extend_data:
     image: $[[ images.train.ref ]]
-    preset: cpu-small
     detach: False
     volumes:
       - ${{ volumes.remote_dataset.ref_ro }}
       - secret:gh-rsa:/root/.ssh/id-rsa
     env:
       PROJECT: /usr/project
-      PACHY_URI: api.pachyderm.mlops.neu.ro:650
-      PACHY_REPO: dogs-demo
+      PYTHONPATH: /usr/project
     params:
       extend_dataset_by:
         default: "1"
         descr: |
           How many new images to add into current dataset.
-      extend_params:
-        default: "--skip_annotation_update"
-        descr: |
-          Additional agruments for extend_dataset.py script.
-      target_git_branch:
-        default: "master"
     bash: |
-      echo "Downloading base dataset"
       echo "IdentityFile ~/.ssh/id-rsa" > ~/.ssh/config
       ssh-keyscan github.com >> ~/.ssh/known_hosts
-      git clone -b ${{ params.target_git_branch }} git@github.com:neuro-inc/mlops-demo-oss-dogs.git ${PROJECT}
+      git clone -b ${PROJECT_GIT_BRANCH} ${PROJECT_GIT_REPO} ${PROJECT}
 
       # Init pachctl
       pachctl config update context default --pachd-address ${PACHY_URI}
       pachctl config set active-context default
       pachctl inspect repo ${PACHY_REPO}
-      
+
       export DATA_PATH=${PROJECT}/data/Images
+      pachctl get file ${PACHY_REPO}@master:/data/Images -r -o ${DATA_PATH} | tee || true # if head is empty
 
       echo "Extending dataset"
       python ${PROJECT}/label_studio/extend_dataset.py \
         --cur_dataset ${DATA_PATH} \
+        --cur_dataset_descr ${PROJECT}/data/result.json \
         --full_dataset ${{ volumes.remote_dataset.mount }}/images/Images/ \
-        --nmber_of_imgs ${{ params.extend_dataset_by }} ${{ params.extend_params }}
+        --nmber_of_imgs ${{ params.extend_dataset_by }} --skip_annotation_update
 
       # Push dataset:
-      mkdir -p ${DATA_PATH}
       # Workaround for https://github.com/pachyderm/pachyderm/issues/4573 :
       # put each file separately, not the whole directory:
       pachctl start commit ${PACHY_REPO}@master
@@ -118,10 +117,9 @@ jobs:
         echo "Saving to pachyderm: ${DATA_PATH}/$img"
         pachctl put file ${PACHY_REPO}@master:data/Images/$img --overwrite -f ${DATA_PATH}/$img | tee
       done
-      pachctl finish commit ${PACHY_REPO}@master
+      pachctl finish commit ${PACHY_REPO}@master -m "Add `ls ${DATA_PATH} | wc -l` images"
 
       # Validate dataset:
-      ls ${DATA_PATH} | wc -l
       pachctl list commit ${PACHY_REPO}@master
       echo "Total images: $(pachctl list file ${PACHY_REPO}@master:data/Images | grep 'file' | wc -l)"
 
@@ -139,27 +137,20 @@ jobs:
     env:
       PROJECT: /usr/project
       LABEL_STUDIO_PROJECT: /label-studio-project
-      PACHY_URI: api.pachyderm.mlops.neu.ro:650
-      PACHY_REPO: dogs-demo
-    params:
-      target_git_branch:
-        default: master
     bash: |
       echo "Downloading base dataset"
       echo "IdentityFile ~/.ssh/id-rsa" > ~/.ssh/config
       ssh-keyscan github.com >> ~/.ssh/known_hosts
-      git clone -b ${{ params.target_git_branch }} git@github.com:neuro-inc/mlops-demo-oss-dogs.git ${PROJECT}
-      
+      git clone -b ${PROJECT_GIT_BRANCH} ${PROJECT_GIT_REPO} ${PROJECT}
+
       # Init pachctl
       pachctl config update context default --pachd-address ${PACHY_URI}
-      pachctl config set active-context default
       pachctl inspect repo ${PACHY_REPO} || pachctl create repo ${PACHY_REPO}
       
       export DATA_PATH=${PROJECT}/data/Images
-
-      # Pull dataset: 
+      COMPLETIONS=${LABEL_STUDIO_PROJECT}/completions
+      # Pull dataset:
       pachctl get file ${PACHY_REPO}@master:/data/ -r -o ${PROJECT}/data/ | tee
-      ls -R ${PROJECT}/data
 
       label-studio init \
         --label-config ${PROJECT}/label_studio/LabelConfig.xml \
@@ -170,29 +161,30 @@ jobs:
         --allow-serving-local-files \
         ${LABEL_STUDIO_PROJECT}
 
-      echo "Copying finished labels into local project"
-      cp -rT ${{ volumes.label_studio.mount }}/completions ${LABEL_STUDIO_PROJECT}/completions || echo "No finished labels found!"
-      echo "Starting rsync daemon to sync labels changes back from local FS to storage"
-      lsyncd -delay 1 -rsync ${LABEL_STUDIO_PROJECT}/completions ${{ volumes.label_studio.mount }}/completions
+      # Pull completions for previously annotated images
+      pachctl get file ${PACHY_REPO}@master:/ls-completions/ -r -o ${COMPLETIONS} | tee
 
       echo "Starting label-studio"
-      completions_count=$(ls ${LABEL_STUDIO_PROJECT}/completions | grep -v ^d | wc -l) || completions_count=0
       python ${PROJECT}/label_studio/launch_ls.py \
         --project_root ${PROJECT} \
         --ls_project_root ${LABEL_STUDIO_PROJECT} -- \
         start --use-gevent --no-browser ${LABEL_STUDIO_PROJECT} 
 
-      # Push dataset:
-      ls ${DATA_PATH} | wc -l
-      # Workaround for https://github.com/pachyderm/pachyderm/issues/4573 :
+      # Push labeling completions, dataset and annotation results to Pachyderm
+      # Workaround for https://github.com/pachyderm/pachyderm/issues/4573
       # put each file separately, not the whole directory:
       pachctl start commit ${PACHY_REPO}@master
+      echo "Saving completions to pachyderm"
+      for compl in `ls ${COMPLETIONS}`; do
+        pachctl put file ${PACHY_REPO}@master:/ls-completions/$compl -o -f ${COMPLETIONS}/$compl | tee
+      done
+
       for img in `ls ${DATA_PATH}`; do
         echo "Saving to pachyderm: ${DATA_PATH}/$img"
         pachctl put file ${PACHY_REPO}@master:data/Images/$img --overwrite -f ${DATA_PATH}/$img | tee
       done
       pachctl put file ${PACHY_REPO}@master:data/result.json --overwrite -f ${PROJECT}/data/result.json | tee
-      pachctl finish commit ${PACHY_REPO}@master
+      pachctl finish commit ${PACHY_REPO}@master -m "Commit annotations for `ls ${COMPLETIONS} | wc -l` images"
 
       # Validate dataset:
       pachctl list commit ${PACHY_REPO}@master
@@ -201,20 +193,22 @@ jobs:
   postgres:
     image: postgres:12.5
     name: $[[ flow.title ]]-postgres
+    preset: cpu-small
     http_port: 5432
     http_auth: False
     life_span: 30d
     detach: True
-    # volumes:
-      # - ${{ volumes.postgress_storage.remote }}:/var/lib/postgresql/data:rw
+    volumes:
+      - ${{ volumes.postgress_storage.ref_rw }}
     env:
       POSTGRES_PASSWORD: password
       POSTGRES_INITDB_ARGS: ""
-      # PGDATA: /var/lib/postgresql/data/pgdata
+      PGDATA: ${{ volumes.postgress_storage.mount }}/pgdata
 
   mlflow_server:
     image: neuromation/mlflow:1.11.0
     name: $[[ flow.title ]]-mlflow-server
+    preset: cpu-small
     http_port: 5000
     http_auth: False
     browse: True
@@ -227,46 +221,10 @@ jobs:
         --backend-store-uri=postgresql://postgres:password@${{ inspect_job('postgres').internal_hostname_named }}:5432
         --default-artifact-root=${{ volumes.mlflow_artifacts.mount }}
 
-  train:
-    image: $[[ images.train.ref ]]
-    preset: gpu-k80-small
-    detach: False
-    life_span: 10d
-    volumes:
-      - $[[ volumes.mlflow_artifacts.ref_rw ]]
-      - secret:gh-rsa:/root/.ssh/id-rsa
-    env:
-      EXPOSE_SSH: "yes"
-      MLFLOW_TRACKING_URI: ${{ inspect_job('mlflow_server').http_url }}
-      PYTHONPATH: /usr/project
-      PROJECT: /usr/project
-      PACHY_URI: api.pachyderm.mlops.neu.ro:650
-      PACHY_REPO: dogs-demo
-    params:
-      target_git_branch:
-        default: "master"
-    bash: |
-        echo "IdentityFile ~/.ssh/id-rsa" > ~/.ssh/config
-        ssh-keyscan github.com >> ~/.ssh/known_hosts
-        git clone -b ${{ params.target_git_branch }} git@github.com:neuro-inc/mlops-demo-oss-dogs.git ${PROJECT}
-        
-        # Init pachctl
-        pachctl config update context default --pachd-address ${PACHY_URI}
-        pachctl config set active-context default
-        pachctl inspect repo ${PACHY_REPO} || pachctl create repo ${PACHY_REPO}
-        
-        # Pull dataset: 
-        pachctl get file ${PACHY_REPO}@master:/data/ -r -o ${PROJECT}/data/ | tee
-        ls -R ${PROJECT}/data
-
-        python -u ${PROJECT}/src/train.py \
-          --data_dir ${PROJECT}/data/Images \
-          --data_description ${PROJECT}/data/result.json
-
   deploy_inference_platform:
     image: $[[ images.seldon.ref ]]
     name: $[[ flow.title ]]-test-inference
-    preset: gpu-k80-small-p
+    preset: gpu-small
     http_port: 5000
     http_auth: False
     life_span: 5h
@@ -286,6 +244,8 @@ jobs:
     browse: True
     params:
       endpoint_url:
+      # https://demo-oss-dogs-test-inference--<user-name>.jobs.<cluster-name>.org.neu.ro/api/v1.0/predictions - if model deployed as platform job
+      # http://seldon.<cluster-name>.org.neu.ro/seldon/seldon/<model-name>-<model-stage>/api/v1.0/predictions -if model is deployed in Seldon
     volumes:
       - $[[ upload(volumes.src).ref_ro ]]
       - $[[ upload(volumes.config).ref_ro ]]
@@ -298,16 +258,10 @@ jobs:
       -f $[[ volumes.src.mount ]]/locust.py --web-port 8080 -H $[[ params.endpoint_url ]]
 
   filebrowser:
-    action: gh:neuro-actions/filebrowser@v1.0.0
+    # https://neu-ro.gitbook.io/neuro-flow/reference/actions-syntax
+    action: gh:neuro-actions/filebrowser@v1.0.1
     args:
-      volumes_project_remote: $[[ volumes.project.remote ]]
-
-  webdav_mlflow:
-    action: gh:neuro-actions/webdav_server@v1.0.0
-    args:
-      volume_remote: $[[ volumes.mlflow_artifacts.remote ]]
-      job_name: $[[ flow.title ]]-webdav-mlflow
-      http_auth: ""
+      volumes_project_remote: storage:$[[ flow.flow_id ]]
 
   create_pipeline:
     preset: cpu-small
@@ -321,17 +275,7 @@ jobs:
       EXPOSE_SSH: "yes"
       PYTHONPATH: /usr/project
       PROJECT: /usr/project
-      PACHY_URI: ${{ params.pachy_uri }}
-      PACHY_REPO: dogs-demo
       MLFLOW_SERVER_URI: ${{ inspect_job('mlflow_server').http_url }}
-      PROJECT_GIT_REPO: ${{ params.project_git_repo }}
-      PROJECT_GIT_BRANCH: ${{ params.project_git_branch }}
-    params:
-      pachy_uri:
-        default: ~
-        descr: URI address of the deployed Pachyderm, even internal address within a K8s cluster
-      project_git_repo: git@github.com:neuro-inc/mlops-demo-oss-dogs.git
-      project_git_branch: ys/finilizing
     bash: |
       echo "IdentityFile ~/.ssh/id-rsa" > ~/.ssh/config
       ssh-keyscan github.com 2>/dev/null >> ~/.ssh/known_hosts
@@ -357,5 +301,39 @@ jobs:
 
       # Create pipeline
       pachctl list pipeline train >/dev/null && pachctl delete pipeline train >/dev/null
-      pachctl create pipeline -f /tmp/pipeline.json 
+      pachctl create pipeline -f /tmp/pipeline.json
+      # to keep the token alive, will be fixed soon
       sleep infinity
+
+  jupyter:                                                                     
+    image: $[[ images.train.ref ]]
+    name: $[[ flow.title ]]-jupyter
+    preset: gpu-small
+    http_port: 8888
+    http_auth: False
+    browse: True
+    detach: False
+    volumes:
+      - "${{ upload(volumes.notebooks).ref_rw }}"
+      - ${{ volumes.mlflow_artifacts.remote }}/0/${{ params.run_id }}/artifacts/model/data/model.h5:/storage/model.h5
+    env:
+      PYTHONPATH: /usr/project
+      PROJECT: /usr/project
+      EXPOSE_SSH: "yes"
+    params:
+      run_id: ~
+    bash: |
+      # Init pachctl
+      pachctl config update context default --pachd-address ${PACHY_URI}
+      pachctl inspect repo ${PACHY_REPO} || pachctl create repo ${PACHY_REPO}
+      pachctl get file ${PACHY_REPO}@master:/data/Images -r -o ${PROJECT}/data/Images | tee
+
+      jupyter notebook  \
+        --no-browser \
+        --ip=0.0.0.0 \
+        --port=8888 \
+        --allow-root \
+        --NotebookApp.token= \
+        --notebook-dir=${{ volumes.notebooks.mount }} \
+        --NotebookApp.shutdown_no_activity_timeout=7200 \
+        --MappingKernelManager.cull_idle_timeout=7200
