--- a/.neuro/training-batch-params.yaml
+++ b/.neuro/training-batch-params.yaml
@@ -1,4 +1,5 @@
-mlflow_server_uri: $MLFLOW_SERVER_URI
+mlflow_storage: $MLFLOW_STORAGE
+mlflow_uri: $MLFLOW_URI
 pachy_uri: $PACHY_URI
 project_git_repo: $PROJECT_GIT_REPO
 project_git_branch: $PROJECT_GIT_BRANCH
