return back proper project branch

--- a/.neuro/live.yml
+++ b/.neuro/live.yml
@@ -10,7 +10,7 @@ defaults:
     PACHY_URI: pachd.pachyderm.svc.cluster.local:30650
     PACHY_REPO: dogs-demo
     PROJECT_GIT_REPO: git@github.com:neuro-inc/mlops-demo-oss-dogs.git
-    PROJECT_GIT_BRANCH: ys/pachyderm_update
+    PROJECT_GIT_BRANCH: master
 
 volumes:
   remote_dataset:
