--- a/.neuro/live.yml
+++ b/.neuro/live.yml
@@ -58,6 +58,9 @@ jobs:
         descr: Storage path, where MLFlow server stores trained model binaries
       mlflow_uri:
         descr: MLFlow server URI
+      pachy_pipeline_name:
+        default: train
+        descr: MLFlow server URI
     env:
       EXPOSE_SSH: "yes"
       PYTHONPATH: /usr/project
@@ -66,6 +69,7 @@ jobs:
       MLFLOW_URI: ${{ params.mlflow_uri }}
       NEURO_TOKEN: secret:platform-token
       TRAIN_IMAGE_REF: ${{ images.train.ref }}
+      PACHY_PIPELINE_NAME: ${{ params.pachy_pipeline_name }}
     bash: |
       echo "IdentityFile ~/.ssh/id-rsa" > ~/.ssh/config
       ssh-keyscan github.com 2>/dev/null >> ~/.ssh/known_hosts
@@ -84,18 +88,18 @@ jobs:
 
       # Create a copy of pipeline template
       cp $${PROJECT}/config/pipeline.json /tmp/pipeline.json
-      # Store platform token
-      sed -i -e s/##NEURO_TOKEN##/${NEURO_TOKEN}/ /tmp/pipeline.json
-      # and cluster name
+      # Store platform token and cluster name
       NEURO_CLUSTER=$(neuro config show | grep "Current Cluster" | awk '{print $3}')
-      sed -i -e s/##NEURO_CLUSTER##/${NEURO_CLUSTER}/ /tmp/pipeline.json
-      # Probagate batch definition and parameters into the Pachyderm pypeline definition
+      sed -i -e s/##NEURO_TOKEN##/${NEURO_TOKEN}/ -e s/##NEURO_CLUSTER##/${NEURO_CLUSTER}/ /tmp/pipeline.json
+      # Probagate batch definition and its parameters into the Pachyderm pypeline definition
       sed -i -e s/##BATCH_B64##/${BATCH_B64}/ -e s/##PARAMS_B64##/${PARAMS_B64}/ /tmp/pipeline.json
+      # Set the pipeline name
+      sed -i -e s/##PIPELINE_NAME##/${PACHY_PIPELINE_NAME}/ /tmp/pipeline.json
 
       # Create pipeline
       pachctl list pipeline train >/dev/null && pachctl delete pipeline train >/dev/null
       pachctl create pipeline -f /tmp/pipeline.json
-      echo "Pipeline created successfully."
+      echo "Pipeline '${PACHY_PIPELINE_NAME}' created successfully."
 
   prepare_remote_dataset:
     name: $[[ flow.title ]]-prepare-dataset
