--- a/.neuro/live.yml
+++ b/.neuro/live.yml
@@ -3,11 +3,11 @@ title: demo-oss-dogs
 id: mlops_demo_oss_dogs
 
 defaults:
-  preset: cpu-medium-p
+  preset: cpu-medium
   life_span: 1d
   env:
     # Those env vars will be assigned to every job in this flow
-    PACHY_URI: pachd.pachyderm.svc.cluster.local:30650
+    PACHY_URI: 20.120.52.120:30650
     PACHY_REPO: dogs-demo
     PROJECT_GIT_REPO: git@github.com:neuro-inc/mlops-demo-oss-dogs.git
     PROJECT_GIT_BRANCH: master
@@ -34,17 +34,17 @@ images:
     ref: image:$[[ flow.flow_id ]]/train:21.5.13-pachyderm
     dockerfile: $[[ flow.workspace ]]/Dockerfile
     context: $[[ flow.workspace ]]/
-    build_preset: cpu-medium-p
+    build_preset: cpu-medium
   seldon:
     ref: image:$[[ flow.flow_id ]]/seldon:20.12.16
     dockerfile: $[[ flow.workspace ]]/seldon/seldon.Dockerfile
     context: $[[ flow.workspace ]]/
-    build_preset: cpu-medium-p
+    build_preset: cpu-medium
   label_studio:
     ref: image:$[[ flow.flow_id ]]/label_studio:21.1.18-pachyderm
     dockerfile: $[[ flow.workspace ]]/label_studio/label_studio.Dockerfile
     context: $[[ flow.workspace ]]/label_studio
-    build_preset: cpu-medium-p
+    build_preset: cpu-medium
 
 jobs:
   create_pipeline:
@@ -155,7 +155,9 @@ jobs:
         --nmber_of_imgs ${{ params.extend_dataset_by }} --skip_annotation_update
 
       # Push dataset
-      pachctl put file -o -r ${PACHY_REPO}@master:data/Images/ -f ${DATA_PATH}/ | tee
+      pachctl put file -r ${PACHY_REPO}@master:data/Images/ -f ${DATA_PATH}/ | tee
+      mkdir -p /tmp/completions
+      pachctl put file -r ${PACHY_REPO}@master:/ls-completions/ -f /tmp/completions | tee
 
       # Validate dataset:
       pachctl list commit ${PACHY_REPO}@master
@@ -189,14 +191,15 @@ jobs:
       # Pull dataset:
       pachctl get file ${PACHY_REPO}@master:/data/ -r -o ${PROJECT}/data/ | tee
 
-      label-studio init \
+      export LABEL_STUDIO_LOCAL_FILES_SERVING_ENABLED=True
+      label-studio init ${LABEL_STUDIO_PROJECT} \
         --label-config ${PROJECT}/label_studio/LabelConfig.xml \
-        --input-path ${DATA_PATH} \
-        --input-format image-dir \
-        --host $(hostname).jobs.${NEURO_JOB_CLUSTER}.org.neu.ro \
+        --data-dir ${DATA_PATH} \
+        --username neuro \
+        --password neuro \
+        --host https://$(hostname).jobs.${NEURO_JOB_CLUSTER}.org.neu.ro \
         --port 443 \
-        --allow-serving-local-files \
-        ${LABEL_STUDIO_PROJECT}
+        --agree-fix-sqlite
 
       # Pull completions for previously annotated images
       pachctl get file ${PACHY_REPO}@master:/ls-completions/ -r -o ${COMPLETIONS} | tee
@@ -209,9 +212,9 @@ jobs:
 
       # Push labeling completions (label studio-specific files), images and annotation results
       pachctl start commit ${PACHY_REPO}@master
-      pachctl put file -o -r ${PACHY_REPO}@master:/ls-completions/ -f ${COMPLETIONS} | tee
-      pachctl put file -o -r ${PACHY_REPO}@master:data/Images/ -f ${DATA_PATH} | tee
-      pachctl put file -o    ${PACHY_REPO}@master:data/result.json -f ${PROJECT}/data/result.json | tee
+      pachctl put file  -r ${PACHY_REPO}@master:/ls-completions/ -f ${COMPLETIONS} | tee
+      pachctl put file  -r ${PACHY_REPO}@master:data/Images/ -f ${DATA_PATH} | tee
+      pachctl put file     ${PACHY_REPO}@master:data/result.json -f ${PROJECT}/data/result.json | tee
       pachctl finish commit ${PACHY_REPO}@master -m "Commit annotations for `ls ${COMPLETIONS} | wc -l` images"
 
       # Validate dataset:
