--- a/.neuro/live.yml
+++ b/.neuro/live.yml
@@ -31,7 +31,7 @@ volumes:
 
 images:
   train:
-    ref: image:$[[ flow.flow_id ]]/train:21.5.13-pachyderm
+    ref: image:/alexeynaiden/$[[ flow.flow_id ]]/train:21.5.13-pachyderm
     dockerfile: $[[ flow.workspace ]]/Dockerfile
     context: $[[ flow.workspace ]]/
     build_preset: cpu-medium
